# hob

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  TODO.md
.claude/commands/: review.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: agent.rs  api.rs  compaction.rs  config.rs  events.rs  ipc.rs  main.rs  models.rs  permission.rs  prompt.rs  store.rs  tui.rs
agent/src/api/: anthropic.rs  mod.rs  sse.rs
agent/src/tools/: edit_file.rs  glob.rs  grep.rs  list_files.rs  mod.rs  read_file.rs  shell.rs
lisp/: hob-ipc.el  hob-process.el  hob-ui.el  hob.el
research/: 00-overview.md  01-agent-loop.md  02-stream-processor.md  03-tool-system.md  04-permission-system.md  05-compaction.md  06-provider-abstraction.md  07-system-prompts.md  08-retry-and-errors.md  09-message-storage.md  10-built-in-tools.md  11-subagents.md  12-extension-points.md  13-snapshot-revert.md  14-configuration.md  CLAUDE.md
src/: agent.rs  compaction.rs  config.rs  error.rs  events.rs  highlight.rs  lsp.rs  main.rs  models.rs  permission.rs  prompt.rs  sandbox.rs  snapshot.rs  store.rs  theme.rs  tui.rs
src/api/: anthropic.rs  mod.rs  openai.rs
src/tools/: edit_file.rs  mod.rs  read_file.rs  shell.rs  web_fetch.rs  web_search.rs  write_file.rs
test/: hob-integration-test.el  hob-test.el
