[package]
name = "hob"
version = "0.1.0"
edition = "2021"
description = "A terminal AI coding agent"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"
base64 = "0.22"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[dev-dependencies]
http = "1"
tempfile = "3"
