[package]
name = "hob-agent"
version = "0.1.0"
edition = "2021"
description = "Rust subprocess for the hob Emacs AI coding agent"

[[bin]]
name = "hob-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
